--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@prisma/adapter-pg": "^7.1.0",
     "pg": "^8.13.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.23.8",
+    "express-rate-limit": "^7.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
