--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8",
-    "express-rate-limit": "^7.4.0"
+    "express-rate-limit": "^7.4.0",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
