--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npm run prisma:generate && ts-node-dev --respawn --transpile-only src/index.ts",
     "smoke": "bash scripts/smoke.sh",
-    "build": "tsc",
+    "build": "npm run prisma:generate && tsc",
     "start": "node dist/index.js",
     "postinstall": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -26,25 +26,28 @@
   "homepage": "https://github.com/SergiiPavlov/mini-crm-core#readme",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
-    "prisma": "^7.1.0",
-    "@prisma/adapter-pg": "^7.1.0",
-    "pg": "^8.13.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.23.8",
     "express-rate-limit": "^7.4.0",
-    "nodemailer": "^6.9.16"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
+    "pg": "^8.13.1",
+    "prisma": "^7.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.9.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/bcryptjs": "^2.4.6"
+    "@types/node": "^22.9.3",
+    "@types/nodemailer": "^6.4.21",
+    "@types/serve-static": "^1.15.10",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.3"
   }
 }
