--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,46 @@
-node_modules
-# Keep environment variables out of version control
-.env
+# Dependencies
+node_modules/
 
-/src/generated/prisma
+# Build output
+dist/
+build/
+out/
+
+# Env files (keep secrets out of git)
+.env
+.env.*
+!.env.example
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS / IDE
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+
+# Testing
+coverage/
+.nyc_output/
+
+# Cache
+.cache/
+.tmp/
+tmp/
+temp/
+*.tsbuildinfo
+
+# Prisma generated client (you generate it in build/deploy)
+src/generated/
+prisma/*.db
+prisma/*.db-journal
+
+# Optional: local tooling
+*.local
