--- a/.env.example
+++ b/.env.example
@@ -12,23 +12,22 @@ PORT=4000
 JWT_SECRET="change-me"
 JWT_EXPIRES_IN="7d"
 
-# CORS allowlist for admin/web origins (comma-separated)
-# Example: CORS_ORIGINS="http://localhost:5173,https://admin.example.com"
+# Admin/Web CORS allowlist (comma-separated)
+# Example:
+# CORS_ORIGINS="http://localhost:5173,http://127.0.0.1:5173,https://your-admin.app"
 CORS_ORIGINS="http://localhost:5173,http://127.0.0.1:5173"
 
 # Cache TTL for DB-backed allowed-origins (ms)
 ORIGINS_CACHE_TTL_MS=300000
 
-# Public endpoints
-# If you embed widgets into real sites, Origin MUST be present.
-# For local file:// or tooling, you may temporarily allow missing Origin:
+# Public endpoints: allow missing Origin (0/1). In prod keep 0.
 PUBLIC_ALLOW_NO_ORIGIN=0
 
-# Rate limits (per projectSlug + IP, per minute)
+# Public endpoints rate limits (per projectSlug + IP, per minute)
 PUBLIC_CONFIG_RL_MAX=60
 PUBLIC_SUBMIT_RL_MAX=10
 
-# Logs: set to 1 to print Zod validation details for public submit
+# Logs: print public validation details (0/1)
 LOG_PUBLIC_VALIDATION=0
 
 # SMTP (optional). If empty, notifications stay disabled.
